add user search endpoints
